Changes: Correct path for the icon

--- a/src/data/flickr-qml.desktop
+++ b/src/data/flickr-qml.desktop
@@ -5,4 +5,4 @@ Type=Application
 Terminal=false
 Name=Flickr QML
 Exec=/usr/bin/invoker --single-instance --type=d --splash /usr/share/pixmaps/flickr-qml-p.jpg --splash-landscape /usr/share/pixmaps/flickr-qml-l.jpg /usr/bin/flickr-qml
-Icon=icons-Applications-flickr
+Icon=/usr/share/icons/icons-Applications-flickr.svg
