--- a/src/data/flickr-qml.desktop
+++ b/src/data/flickr-qml.desktop
@@ -4,5 +4,5 @@ Version=1.0
 Type=Application
 Terminal=false
 Name=Flickr QML
-Exec=/usr/bin/invoker --single-instance --type=d --splash /usr/share/pixmaps/flickr-qml-splash-p-800x480.jpg /usr/bin/flickr-qml
+Exec=/usr/bin/invoker --single-instance --type=d --splash /usr/share/pixmaps/flickr-qml-splash-p-800x480.png /usr/bin/flickr-qml
 Icon=/usr/share/pixmaps/icons-Applications-flickr.png
